# orca-code

./: .gitignore  FUSION_REPORT.md  INSTALL.md  LICENSE  PROJECT_ANALYSIS.md  README.md  TTS_README.md  VOICE_INPUT_README.md  _add_imports.py  _build_main.py  _diagnose_recognition.py  _extract_modules.py  _memory_manager.py  _python_repl.py  _runtool_section.txt  _speech_recognition_hybrid.py  _speech_recognition_vosk.py  _test_tok.py  _toolmap_section.txt  _tools_section.txt  config.example.json  orca_code.py  orca_code.spec  pyproject.toml  requirements.txt  setup.py  speech_recognition_whisper.py  start.bat  start.sh  start_all.bat  start_local.bat  test_location.ps1  token_counter.py  token_test.txt  tray_app.py  ultimate_agent.py
.github/workflows/: ci.yml  test.yml
docs/: 2026-06-05_开发总结.md  2026-06-05_行为分析报告.md  2026-06-06_开发总结.md  2026-06-08_开发总结.md  2026-06-09_开发总结.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README_v4.md  合并项目总结.md  对比分析报告_v4.md
docs/assets/: .gitkeep
memory/: orca_memory.db  security-fixes-2026-06-06.md
orca_code/: __init__.py  alias_store.py  batch_executor.py  bridge.py  config.py  config_validator.py  constitution.py  cost_estimator.py  daemon.py  dashboard.py  fallback.py  file_watcher.py  hooks.py  key_rotation.py  keybindings.py  latency_tracker.py  lsp.py  main.py  mcp_client.py  orcaignore.py  orchestrator.py  permissions.py  plugin_loader.py  rate_tracker.py  response_cache.py  rollback.py  rpc_server.py  security.py  server.py  session.py  session_compaction.py  session_crypto.py  session_messages.py  session_persistence.py  session_prompt.py  session_stream.py  session_tags.py  session_ui.py  shell_session.py  smart_context.py  (+20 more)
orca_code/cli/: __init__.py  commands.py
orca_code/core/: __init__.py  errors.py  event_bus.py
orca_code/infrastructure/: __init__.py  config_loader.py  feature_flags.py  file_logger.py  helpers.py  metrics.py  platform.py  prompt_loader.py  provider_client.py  secrets.py  updater.py
orca_code/memory/: __init__.py  knowledge_graph.py
orca_code/prompts/system/: base.md  deepseek.md  simple.md
orca_code/providers/: __init__.py  anthropic_compat.py  base.py  deepseek.py  local.py  openai_compat.py  registry.py
orca_code/tools/: __init__.py  automation.py  base.py  bridge.py  browser.py  core.py  dev.py  extended.py  office.py  skills.py  tasks.py  web.py
orca_native/: Cargo.toml  build_and_install.py
orca_native/python/orca_native/: __init__.py
orca_native/src/: diff.rs  encoding.rs  lib.rs  search.rs  tokenizer.rs  walk.rs
skills/: caveman.md  diagnose.md  grill_me.md  grill_with_docs.md  handoff.md  improve_codebase_architecture.md  prototype.md  tdd.md  to_issues.md  to_prd.md  write_a_skill.md  zoom_out.md
tests/: conftest.py  test_errors.py  test_feature_flags.py  test_integration.py  test_knowledge_graph.py  test_metrics.py  test_new_modules.py  test_orchestrator.py  test_providers.py  test_security.py  test_session_persistence.py  test_tasks.py  test_tools.py
ultimate_agent/: __init__.py  config.py  main.py  security.py  session.py  tools_automation.py  tools_core.py  tools_dev.py  tools_office.py  tools_skills.py  tools_web.py  tts_mcp.py  utils.py
