[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orca-code"
version = "5.1.0"
description = "Desktop AI assistant — 58 tools, multi-provider LLM support"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Orca Code Contributors" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: User Interfaces",
]

dependencies = [
    "openai>=1.0",
    "rich>=13.0",
    "requests>=2.28",
    "charset-normalizer>=3.0",
    "tenacity>=8.0",
]

[project.optional-dependencies]
gui = [
    "pyautogui",
    "pygetwindow",
    "pyperclip",
    "mss",
    "rapidocr-onnxruntime",
]
browser = [
    "playwright",
]
office = [
    "openpyxl",
    "python-docx",
]
speech = [
    "vosk",
    "sounddevice",
]
tts = [
    "torch",
    "torchaudio",
    "transformers",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]
all = [
    "orca-code[gui,browser,office,speech,tts,dev]",
]

[project.urls]
Homepage = "https://github.com/orca-code/orca-code"
Documentation = "https://github.com/orca-code/orca-code/blob/main/README.md"
Repository = "https://github.com/orca-code/orca-code"

[project.scripts]
orca-code = "orca_code.main:main"
orca-dashboard = "orca_code.dashboard:main"

[tool.setuptools]
packages = [
    "orca_code",
    "orca_code.cli",
    "orca_code.core",
    "orca_code.infrastructure",
    "orca_code.providers",
    "orca_code.tools",
    "orca_native",
]

[tool.setuptools.package-dir]
"orca_code" = "orca_code"
"orca_native" = "orca_native/python/orca_native"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
